--- a/CSS/StyleHome.css
+++ b/CSS/StyleHome.css
@@ -31,7 +31,7 @@ body, html {
     background-position: center;
     background-color: rgba(255, 253, 253, 0.223);
     background-blend-mode: overlay;
-    height: 60vh;
+    height: 100vh;
     width: 100%;
     margin: 0;
     padding: 0;
@@ -48,12 +48,12 @@ body, html {
     width: 250px;
     padding: 1.5rem;
     box-sizing: border-box;
-    position: fixed;
+    position: fixed !important;
     top: 0;
     left: 0;
-    height: 60vh;
+    height: 100vh;
     z-index: 1000;
-    overflow-y: auto;
+    overflow-y:auto;
     margin: 0;
     border: none;
 }
