--- a/CSS/StyleContact.css
+++ b/CSS/StyleContact.css
@@ -10,9 +10,10 @@
 body{
     margin:0;
     padding:0;
-    
-    height:95vh;    
+    background: linear-gradient(var(--forest),var(--herb));
+    background-repeat: no-repeat;
     font-family: Arial, sans-serif;
+    height:95vh;
     text-align: center;
 }
 .sidebar {
@@ -75,6 +76,42 @@ body{
         height: auto;
         min-height: auto;
     }
+}
+.contact-info {
+    padding: 2rem;
+    background-color: var(--cream);
+    font-weight: bold;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    margin: 40px auto;
+    width: 500px;
+}
+.map-container {
+    position: relative;
+    width: 100%;
+    height: 400px;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+}
+
+.map-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+.contact-info a {
+    color: black;           /* golden beige */
+    text-decoration: none;
+    font-weight: 500;
+    transition: color 0.2s ease;
+}
+
+.contact-info a:hover {
+  color: #A3B18A;            /* olive tint on hover */
 }
 .whatsapp-float {
     position: fixed;
