--- a/CSS/StyleContact.css
+++ b/CSS/StyleContact.css
@@ -12,9 +12,34 @@ body{
     padding:0;
     background: linear-gradient(var(--forest),var(--herb));
     background-repeat: no-repeat;
+    background-size: cover;
+    height: 95vh;
     font-family: Arial, sans-serif;
-    height:95vh;
     text-align: center;
+    opacity: 0;
+    animation: fadeInAnimation 0.8s ease forwards;
+}
+@keyframes fadeInAnimation {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.fade-out {
+  animation: fadeOutAnimation 0.4s ease forwards;
+}
+
+@keyframes fadeOutAnimation {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
 .sidebar {
     background-color: rgba(47, 79, 79, 0.95);
@@ -23,7 +48,7 @@ body{
     padding: 1.5rem;
     box-sizing: border-box;
     position: fixed;
-    top: 0;
+    top: -50px;
     left: 0;
     height: 100vh;
     z-index: 1000;
@@ -78,13 +103,13 @@ body{
     }
 }
 .contact-info {
+    margin:50px 700px;
     padding: 2rem;
     background-color: var(--cream);
     font-weight: bold;
-    border-radius: 10px;
+    border-radius: 12px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    margin: 40px auto;
-    width: 500px;
+    width: 600px;
 }
 .map-container {
     position: relative;
